<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/Etext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="end"
        android:inputType="text"
        android:text="@string/zero"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="200dp"
        android:weightSum="4"
        android:onClick="onClick"
        style="?android:attr/buttonBarStyle">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b9"
            android:layout_weight="1"
            android:text="@string/nine"
            android:enabled="true"
            android:onClick="onClick"
            android:clickable="true"
            android:focusable="true"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b8"
            android:layout_weight="1"
            android:text="@string/eight"
            android:onClick="onClick"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b7"
            android:layout_weight="1"
            android:text="@string/seven"
            android:enabled="true"
            android:clickable="true"
            android:onClick="onClick"
            android:focusable="true"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bpl"
            android:layout_weight="1"
            android:text="@string/plus"
            android:onClick="onClick"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        style="?android:attr/buttonBarStyle">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b6"
            android:layout_weight="1"
            android:text="@string/six"
            android:clickable="true"
            android:enabled="true"
            android:onClick="onClick"
            style="?android:attr/buttonBarButtonStyle" android:focusable="true"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b5"
            android:layout_weight="1"
            android:text="@string/five"
            android:onClick="onClick"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b4"
            android:layout_weight="1"
            android:text="@string/four"
            android:enabled="true"
            android:clickable="true"
            android:onClick="onClick"
            android:focusable="true"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bmin"
            android:layout_weight="1"
            android:text="@string/minus"
            android:onClick="onClick"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        style="?android:attr/buttonBarStyle">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b3"
            android:layout_weight="1"
            android:text="@string/three"
            android:onClick="onClick"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b2"
            android:layout_weight="1"
            android:text="@string/two"
            android:enabled="true"
            android:clickable="true"
            android:onClick="onClick"
            android:focusable="true"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b1"
            android:layout_weight="1"
            android:text="@string/one"
            android:onClick="onClick"
            android:enabled="true"
            android:clickable="true"
            android:focusable="true"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bmul"
            android:layout_weight="1"
            android:text="@string/multiplication"
            android:onClick="onClick"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        style="?android:attr/buttonBarStyle">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bd"
            android:layout_weight="1"
            android:text="@string/dot"
            android:enabled="true"
            android:clickable="true"
            android:onClick="onClick"
            android:focusable="true"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b0"
            android:layout_weight="1"
            android:text="@string/zero"
            android:clickable="true"
            android:enabled="true"
            android:onClick="onClick"
            android:focusable="true"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/bcl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:enabled="true"
            android:onClick="onClick"
            android:text="@string/clear"
             android:focusable="true"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/beq"
            android:layout_weight="1"
            android:text="@string/equal"
            android:onClick="onClick"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bdiv"
            android:layout_weight="1"
            android:text="@string/divide"
            android:onClick="onClick"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        style="?android:attr/buttonBarStyle">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/cl1"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:enabled="true"
            android:layout_gravity="center"
            android:text="@string/clearby1"
            android:onClick="onClick"
             android:focusable="true"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>